--- a/index.html
+++ b/index.html
@@ -27,225 +27,225 @@
  <div>
      <image src="shouye.png"></image>
  </div>
-    <image src = "01.png"><image>
+    <image src = "01.png"></image>
         
         
-        <image src = "1.jpg"><image>
-<image src = "02.png"><image>
-<image src = "03.png"><image>
-<image src = "04.png"><image>
-<image src = "05.png"><image>
-<image src = "a7.png"><image>
-<image src = "a11.jpg"><image>
-<image src = "a11.png"><image>
-<image src = "a12.jpg"><image>
-<image src = "a12.png"><image>
-<image src = "a13.jpg"><image>
-<image src = "a13.png"><image>
-<image src = "a31.jpg"><image>
-<image src = "a31.png"><image>
-<image src = "a32.jpg"><image>
-<image src = "a32.png"><image>
-<image src = "a33.jpg"><image>
-<image src = "a33.png"><image>
-<image src = "a34.jpg"><image>
-<image src = "a34.png"><image>
-<image src = "a35.jpg"><image>
-<image src = "a35.png"><image>
-<image src = "a36.jpg"><image>
-<image src = "a80.png"><image>
-<image src = "a81.png"><image>
-<image src = "a82.png"><image>
-<image src = "a83.png"><image>
-<image src = "a84.png"><image>
-<image src = "a87.jpg"><image>
-<image src = "a88.png"><image>
-<image src = "a89.png"><image>
-<image src = "a91.jpg"><image>
-<image src = "a101.jpg"><image>
-<image src = "a102.jpg"><image>
-<image src = "a104.jpg"><image>
-<image src = "a105.jpg"><image>
-<image src = "a106.png"><image>
-<image src = "01.png"><image>
-<image src = "1.jpg"><image>
-<image src = "02.png"><image>
-<image src = "03.png"><image>
-<image src = "04.png"><image>
-<image src = "05.png"><image>
-<image src = "a7.png"><image>
-<image src = "a11.jpg"><image>
-<image src = "a11.png"><image>
-<image src = "a12.jpg"><image>
-<image src = "a12.png"><image>
-<image src = "a13.jpg"><image>
-<image src = "a13.png"><image>
-<image src = "a31.jpg"><image>
-<image src = "a31.png"><image>
-<image src = "a32.jpg"><image>
-<image src = "a32.png"><image>
-<image src = "a33.jpg"><image>
-<image src = "a33.png"><image>
-<image src = "a34.jpg"><image>
-<image src = "a34.png"><image>
-<image src = "a35.jpg"><image>
-<image src = "a35.png"><image>
-<image src = "a36.jpg"><image>
-<image src = "a80.png"><image>
-<image src = "a81.png"><image>
-<image src = "a82.png"><image>
-<image src = "a83.png"><image>
-<image src = "a84.png"><image>
-<image src = "a87.jpg"><image>
-<image src = "a88.png"><image>
-<image src = "a89.png"><image>
-<image src = "a91.jpg"><image>
-<image src = "a101.jpg"><image>
-<image src = "a102.jpg"><image>
-<image src = "a104.jpg"><image>
-<image src = "a105.jpg"><image>
-<image src = "a106.png"><image>
-<image src = "a107.jpg"><image>
-<image src = "a108.png"><image>
-<image src = "a109.png"><image>
-<image src = "a111.png"><image>
-<image src = "a121.jpg"><image>
-<image src = "a122.jpg"><image>
-<image src = "a123.jpg"><image>
-<image src = "a124.jpg"><image>
-<image src = "a125.jpg"><image>
-<image src = "a126.jpg"><image>
-<image src = "a127.jpg"><image>
-<image src = "a128.jpg"><image>
-<image src = "a129.jpg"><image>
-<image src = "a131.jpg"><image>
-<image src = "a132.jpg"><image>
-<image src = "a133.jpg"><image>
-<image src = "a134.jpg"><image>
-<image src = "a135.jpg"><image>
-<image src = "a141.jpg"><image>
-<image src = "a142.jpg"><image>
-<image src = "a142.png"><image>
-<image src = "a143.jpg"><image>
-<image src = "a143.png"><image>
-<image src = "a144.png"><image>
-<image src = "a151.png"><image>
-<image src = "a161.jpg"><image>
-<image src = "a162.jpg"><image>
-<image src = "a163.jpg"><image>
-<image src = "a164.png"><image>
-<image src = "a165.png"><image>
-<image src = "a166.png"><image>
-<image src = "a167.png"><image>
-<image src = "a171.jpg"><image>
-<image src = "a172.jpg"><image>
-<image src = "a173.jpg"><image>
-<image src = "a174.jpg"><image>
-<image src = "a175.jpg"><image>
-<image src = "a176.jpg"><image>
-<image src = "a177.jpg"><image>
-<image src = "a178.jpg"><image>
-<image src = "a179.jpg"><image>
-<image src = "a181.png"><image>
-<image src = "a182.png"><image>
-<image src = "a183.png"><image>
-<image src = "a184.png"><image>
-<image src = "a185.png"><image>
-<image src = "a185.png"><image>
-<image src = "a186.png"><image>
-<image src = "a187.png"><image>
-<image src = "a188.jpg"><image>
-<image src = "a189.png"><image>
-<image src = "a191.jpg"><image>
-<image src = "a191.png"><image>
-<image src = "a192.jpg"><image>
-<image src = "a192.png"><image>
-<image src = "a193.jpg"><image>
-<image src = "a193.jpg"><image>
-<image src = "a194.jpg"><image>
-<image src = "a195.jpg"><image>
-<image src = "a199.png"><image>
-<image src = "a201.jpg"><image>
-<image src = "a311.jpg"><image>
-<image src = "a333.png"><image>
-<image src = "a444.png"><image>
-<image src = "a555.png"><image>
-<image src = "a1811.jpg"><image>
-<image src = "a1812.jpg"><image>
-<image src = "a1813.jpg"><image>
-<image src = "beijin.jpg"><image>
-<image src = "bf.png"><image>
-<image src = "bfqb.png"><image>
-<image src = "bj.jpg"><image>
-<image src = "bj1.jpg"><image>
-<image src = "CC.jpg"><image>
-<image src = "da.jpg"><image>
-<image src = "dibu.jpg"><image>
-<image src = "dibu1.jpg"><image>
-<image src = "dx.png"><image>
-<image src = "fenxiang.png"><image>
-<image src = "fhj.png"><image>
-<image src = "fhj2.png"><image>
-<image src = "fhj3.png"><image>
-<image src = "fy.jpg"><image>
-<image src = "gedan1.jpg"><image>
-<image src = "gedan2.jpg"><image>
-<image src = "gedan3.jpg"><image>
-<image src = "geren.png"><image>
-<image src = "gouwuche.png"><image>
-<image src = "gouzi.jpg"><image>
-<image src = "h1.png"><image>
-<image src = "h2.png"><image>
-<image src = "HQ.jpg"><image>
-<image src = "im.png"><image>
-<image src = "ooo.png"><image>
-<image src = "oww.png"><image>
-<image src = "p.jpg"><image>
-<image src = "p1.jpg"><image>
-<image src = "piao.png"><image>
-<image src = "pinglun.png"><image>
-<image src = "pl.jpg"><image>
-<image src = "s1.jpg"><image>
-<image src = "s2.jpg"><image>
-<image src = "s3.jpg"><image>
-<image src = "s4.jpg"><image>
-<image src = "s5.jpg"><image>
-<image src = "s6.jpg"><image>
-<image src = "s7.jpg"><image>
-<image src = "s8.jpg"><image>
-<image src = "s9.jpg"><image>
-<image src = "s11.jpg"><image>
-<image src = "s22.jpg"><image>
-<image src = "s33.jpg"><image>
-<image src = "shamyishou.png"><image>
-<image src = "shanchu.png"><image>
-<image src = "shang.png"><image>
-<image src = "shashou.jpg"><image>
-<image src = "shashou1.jpg"><image>
-<image src = "sjbf.png"><image>
-<image src = "spbf.png"><image>
-<image src = "taiyi.jpg"><image>
-<image src = "tianjiapng.png"><image>
-<image src = "tingge.jpg"><image>
-<image src = "tingge1.jpg"><image>
-<image src = "touxiang.jpg"><image>
-<image src = "xaizai.png"><image>
-<image src = "xia.png"><image>
-<image src = "xiayishou.png"><image>
-<image src = "xin.png"><image>
-<image src = "xingxing.png"><image>
-<image src = "xx3.png"><image>
-<image src = "y.png"><image>
-<image src = "yemian.png"><image>
-<image src = "you.png"><image>
-<image src = "yu.png"><image>
-<image src = "yuer.png"><image>
-<image src = "zanting.png"><image>
-<image src = "zhu.png"><image>
-<image src = "zhu1.png"><image>
-<image src = "zhu2.png"><image>
-<image src = "zt.png"><image>
-<image src = "zuo.png"><image>
+        <image src = "1.jpg"></image>
+<image src = "02.png"></image>
+<image src = "03.png"></image>
+<image src = "04.png"></image>
+<image src = "05.png"></image>
+<image src = "a7.png"></image>
+<image src = "a11.jpg"></image>
+<image src = "a11.png"></image>
+<image src = "a12.jpg"></image>
+<image src = "a12.png"></image>
+<image src = "a13.jpg"></image>
+<image src = "a13.png"></image>
+<image src = "a31.jpg"></image>
+<image src = "a31.png"></image>
+<image src = "a32.jpg"></image>
+<image src = "a32.png"></image>
+<image src = "a33.jpg"></image>
+<image src = "a33.png"></image>
+<image src = "a34.jpg"></image>
+<image src = "a34.png"></image>
+<image src = "a35.jpg"></image>
+<image src = "a35.png"></image>
+<image src = "a36.jpg"></image>
+<image src = "a80.png"></image>
+<image src = "a81.png"></image>
+<image src = "a82.png"></image>
+<image src = "a83.png"></image>
+<image src = "a84.png"></image>
+<image src = "a87.jpg"></image>
+<image src = "a88.png"></image>
+<image src = "a89.png"></image>
+<image src = "a91.jpg"></image>
+<image src = "a101.jpg"></image>
+<image src = "a102.jpg"></image>
+<image src = "a104.jpg"></image>
+<image src = "a105.jpg"></image>
+<image src = "a106.png"></image>
+<image src = "01.png"></image>
+<image src = "1.jpg"></image>
+<image src = "02.png"></image>
+<image src = "03.png"></image>
+<image src = "04.png"></image>
+<image src = "05.png"></image>
+<image src = "a7.png"></image>
+<image src = "a11.jpg"></image>
+<image src = "a11.png"></image>
+<image src = "a12.jpg"></image>
+<image src = "a12.png"></image>
+<image src = "a13.jpg"></image>
+<image src = "a13.png"></image>
+<image src = "a31.jpg"></image>
+<image src = "a31.png"></image>
+<image src = "a32.jpg"></image>
+<image src = "a32.png"></image>
+<image src = "a33.jpg"></image>
+<image src = "a33.png"></image>
+<image src = "a34.jpg"></image>
+<image src = "a34.png"></image>
+<image src = "a35.jpg"></image>
+<image src = "a35.png"></image>
+<image src = "a36.jpg"></image>
+<image src = "a80.png"></image>
+<image src = "a81.png"></image>
+<image src = "a82.png"></image>
+<image src = "a83.png"></image>
+<image src = "a84.png"></image>
+<image src = "a87.jpg"></image>
+<image src = "a88.png"></image>
+<image src = "a89.png"></image>
+<image src = "a91.jpg"></image>
+<image src = "a101.jpg"></image>
+<image src = "a102.jpg"></image>
+<image src = "a104.jpg"></image>
+<image src = "a105.jpg"></image>
+<image src = "a106.png"></image>
+<image src = "a107.jpg"></image>
+<image src = "a108.png"></image>
+<image src = "a109.png"></image>
+<image src = "a111.png"></image>
+<image src = "a121.jpg"></image>
+<image src = "a122.jpg"></image>
+<image src = "a123.jpg"></image>
+<image src = "a124.jpg"></image>
+<image src = "a125.jpg"></image>
+<image src = "a126.jpg"></image>
+<image src = "a127.jpg"></image>
+<image src = "a128.jpg"></image>
+<image src = "a129.jpg"></image>
+<image src = "a131.jpg"></image>
+<image src = "a132.jpg"></image>
+<image src = "a133.jpg"></image>
+<image src = "a134.jpg"></image>
+<image src = "a135.jpg"></image>
+<image src = "a141.jpg"></image>
+<image src = "a142.jpg"></image>
+<image src = "a142.png"></image>
+<image src = "a143.jpg"></image>
+<image src = "a143.png"></image>
+<image src = "a144.png"></image>
+<image src = "a151.png"></image>
+<image src = "a161.jpg"></image>
+<image src = "a162.jpg"></image>
+<image src = "a163.jpg"></image>
+<image src = "a164.png"></image>
+<image src = "a165.png"></image>
+<image src = "a166.png"></image>
+<image src = "a167.png"></image>
+<image src = "a171.jpg"></image>
+<image src = "a172.jpg"></image>
+<image src = "a173.jpg"></image>
+<image src = "a174.jpg"></image>
+<image src = "a175.jpg"></image>
+<image src = "a176.jpg"></image>
+<image src = "a177.jpg"></image>
+<image src = "a178.jpg"></image>
+<image src = "a179.jpg"></image>
+<image src = "a181.png"></image>
+<image src = "a182.png"></image>
+<image src = "a183.png"></image>
+<image src = "a184.png"></image>
+<image src = "a185.png"></image>
+<image src = "a185.png"></image>
+<image src = "a186.png"></image>
+<image src = "a187.png"></image>
+<image src = "a188.jpg"></image>
+<image src = "a189.png"></image>
+<image src = "a191.jpg"></image>
+<image src = "a191.png"></image>
+<image src = "a192.jpg"></image>
+<image src = "a192.png"></image>
+<image src = "a193.jpg"></image>
+<image src = "a193.jpg"></image>
+<image src = "a194.jpg"></image>
+<image src = "a195.jpg"></image>
+<image src = "a199.png"></image>
+<image src = "a201.jpg"></image>
+<image src = "a311.jpg"></image>
+<image src = "a333.png"></image>
+<image src = "a444.png"></image>
+<image src = "a555.png"></image>
+<image src = "a1811.jpg"></image>
+<image src = "a1812.jpg"></image>
+<image src = "a1813.jpg"></image>
+<image src = "beijin.jpg"></image>
+<image src = "bf.png"></image>
+<image src = "bfqb.png"></image>
+<image src = "bj.jpg"></image>
+<image src = "bj1.jpg"></image>
+<image src = "CC.jpg"></image>
+<image src = "da.jpg"></image>
+<image src = "dibu.jpg"></image>
+<image src = "dibu1.jpg"></image>
+<image src = "dx.png"></image>
+<image src = "fenxiang.png"></image>
+<image src = "fhj.png"></image>
+<image src = "fhj2.png"></image>
+<image src = "fhj3.png"></image>
+<image src = "fy.jpg"></image>
+<image src = "gedan1.jpg"></image>
+<image src = "gedan2.jpg"></image>
+<image src = "gedan3.jpg"></image>
+<image src = "geren.png"></image>
+<image src = "gouwuche.png"></image>
+<image src = "gouzi.jpg"></image>
+<image src = "h1.png"></image>
+<image src = "h2.png"></image>
+<image src = "HQ.jpg"></image>
+<image src = "im.png"></image>
+<image src = "ooo.png"></image>
+<image src = "oww.png"></image>
+<image src = "p.jpg"></image>
+<image src = "p1.jpg"></image>
+<image src = "piao.png"></image>
+<image src = "pinglun.png"></image>
+<image src = "pl.jpg"></image>
+<image src = "s1.jpg"></image>
+<image src = "s2.jpg"></image>
+<image src = "s3.jpg"></image>
+<image src = "s4.jpg"></image>
+<image src = "s5.jpg"></image>
+<image src = "s6.jpg"></image>
+<image src = "s7.jpg"></image>
+<image src = "s8.jpg"></image>
+<image src = "s9.jpg"></image>
+<image src = "s11.jpg"></image>
+<image src = "s22.jpg"></image>
+<image src = "s33.jpg"></image>
+<image src = "shamyishou.png"></image>
+<image src = "shanchu.png"></image>
+<image src = "shang.png"></image>
+<image src = "shashou.jpg"></image>
+<image src = "shashou1.jpg"></image>
+<image src = "sjbf.png"></image>
+<image src = "spbf.png"></image>
+<image src = "taiyi.jpg"></image>
+<image src = "tianjiapng.png"></image>
+<image src = "tingge.jpg"></image>
+<image src = "tingge1.jpg"></image>
+<image src = "touxiang.jpg"></image>
+<image src = "xaizai.png"></image>
+<image src = "xia.png"></image>
+<image src = "xiayishou.png"></image>
+<image src = "xin.png"></image>
+<image src = "xingxing.png"></image>
+<image src = "xx3.png"></image>
+<image src = "y.png"></image>
+<image src = "yemian.png"></image>
+<image src = "you.png"></image>
+<image src = "yu.png"></image>
+<image src = "yuer.png"></image>
+<image src = "zanting.png"></image>
+<image src = "zhu.png"></image>
+<image src = "zhu1.png"></image>
+<image src = "zhu2.png"></image>
+<image src = "zt.png"></image>
+<image src = "zuo.png"></image>
 
 </body>
 
